--- a/src/lib/scss/_typography.scss
+++ b/src/lib/scss/_typography.scss
@@ -32,7 +32,7 @@ i {
 }
 
 ul li::marker {
-	color: rgba(255, 49, 0, 0.96); /* Change the bullet color to red */
+	color: rgba(255, 49, 0, 0.96) !important;
 }
 
 // #region Titles
@@ -46,7 +46,7 @@ h1 {
 }
 
 h2 {
-	font-size: 1.8rem;
+	font-size: 1.8rem !important;
 	font-weight: 600;
 }
 
