--- a/src/lib/scss/_markdown.scss
+++ b/src/lib/scss/_markdown.scss
@@ -1,5 +1,10 @@
 #article-content {
 	.content {
+		a {
+			color: rgba(255, 49, 0, 0.96);
+			word-break: keep-all;
+		}
+
 		a:not(.button) {
 			&:hover {
 				filter: drop-shadow(0px 0px 3px var(--color--primary));
@@ -96,5 +101,10 @@
 
 	img {
 		border-radius: 6px;
+	}
+
+	ul li {
+		list-style-type: disc;
+		margin-left: 1rem;
 	}
 }
