--- a/src/lib/scss/_typography.scss
+++ b/src/lib/scss/_typography.scss
@@ -18,7 +18,7 @@ a {
 }
 
 ::selection {
-	background-color: rgba(var(--color--primary-rgb), 0.3);
+	background-color: rgba(0, 120, 215, 0.3);
 	color: var(--color--text);
 	text-shadow: none;
 }
